[package]
name = "jot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
clap = { version = "4.4.11", features = ["derive"] }
edit = "0.1.4"
miette = { version = "5.10.0", features = ["fancy"] }
owo-colors = "3.5.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
tokio = { version = "1.34.0", features = ["full"] }
